--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@
                         <p style="margin: 20px 0; line-height: 1.6;">
                             Dapatkan informasi terbaru tentang produk, promo, dan update melalui saluran resmi kami.
                         </p>
-                        <a href="https://whatsapp.com/channel/0029Va5jJ5e8G7QJ0Ff1xE1H" class="whatsapp-btn" target="_blank">
+                        <a href="https://whatsapp.com/channel/0029Vb5wsPNI7BeKSUpCmb3b" class="whatsapp-btn" target="_blank">
                             <i class="fab fa-whatsapp"></i> Gabung Saluran Sekarang
                         </a>
                     </div>
@@ -1076,7 +1076,7 @@
                         <p style="margin: 20px 0; line-height: 1.6;">
                             Bergabunglah dengan komunitas pengguna Dinz Marketplace untuk berbagi pengalaman dan mendapatkan dukungan.
                         </p>
-                        <a href="https://chat.whatsapp.com/InviteCode" class="whatsapp-btn" style="background: linear-gradient(to right, var(--primary), var(--secondary));" target="_blank">
+                        <a href="https://whatsapp.com/channel/0029Vb5wsPNI7BeKSUpCmb3b" class="whatsapp-btn" style="background: linear-gradient(to right, var(--primary), var(--secondary));" target="_blank">
                             <i class="fab fa-whatsapp"></i> Gabung Grup Komunitas
                         </a>
                     </div>
